--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -2,16 +2,16 @@
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <!-- Insert generated snippet here -->
   <script src="https://giscus.app/client.js"
-        data-repo="seboraid/site"
-        data-repo-id="[REPOSITORIO ID]"
-        data-category="[NOMBRE CATEGORÍA]"
-        data-category-id="[ID CATEGORÍA]"
+        data-repo="seboraid/seboraid.github.io"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkxMjQ2ODY4NDU="
+        data-category="General"
+        data-category-id="DIC_kwDOB26R_c4CR2vj"
         data-mapping="pathname"
-        data-strict="1"
+        data-strict="0"
         data-reactions-enabled="1"
-        data-emit-metadata="0"
+        data-emit-metadata="1"
         data-input-position="bottom"
-        data-theme="light"
+        data-theme="dark"
         data-lang="es"
         data-loading="lazy"
         crossorigin="anonymous"
